- Added a about page, a details view for each item element from the RecyclerView - Layout files for each activity - Updated strings and style

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">Project</string>
+    <string name="app_name">Police News</string>
+    <string name="aboutText">This apps function is providing you with information about the latest crime news. The information about the crimes are directly taken from the Police\'s website. </string>
+    <string name="aboutTitle">About this app</string>
 </resources>
